@@ -104,6 +104,11 @@
 #undef UPNP_HAVE_SSDP
 
 
+/** Defined to 1 if the library has been compiled with optional SSDP headers
+ *  support (i.e. configure --enable-optssdp) */
+#undef UPNP_HAVE_OPTSSDP
+
+
 /** Defined to 1 if the library has been compiled with the SOAP part enabled
  *  (i.e. configure --enable-soap) */
 #undef UPNP_HAVE_SOAP
